fix sticky buttons alignment

--- a/src/scss/main/phone-link.scss
+++ b/src/scss/main/phone-link.scss
@@ -42,7 +42,7 @@
     #flexline-call-button {
         width: 35px;
         height: 35px;
-        right: 10px;
+        left: 5px;
         > span{
             &::before{
                 font-size: 25px;
