--- a/src/scss/main/slide-in-menu.scss
+++ b/src/scss/main/slide-in-menu.scss
@@ -97,7 +97,7 @@ button{
     button#slide-in-menu-button {
         width: 35px;
         height: 35px;
-        right: 10px;
+        right: 5px;
         > span{
             &::before{
                 font-size: 25px;
